style/style.css
html,body{
  height: 100%;
}
img.kaibotslogo{
    height: 30px;
}
.news br {
    display: block;
    margin: 20px 0;
}
img.left{
    display: inline;
    margin:30px;
    margin-left: 0;
    margin-right: auto;
}
h3.newsheader{
    font-size: 20px;
}
.founderstable p {
  line-height: 25px;
  padding: 20px;
}
.founderblock{
    padding: 10px;
}
h4.footertext{
    color: #fff;
}
h2.missionheader{
    margin: 30px;
}
hr.thick{
    border: none;
    height: 1px;
    /* Set the hr color */
    color: #333; /* old IE */
    background-color: #333; /* Modern Browsers */
}
h4.footertext{
    text-align: center;
    font-size: 16px;
}
h2.welcome{
  font-family: "Mechalock", Verdana;
  font-size: 38px;
  letter-spacing: 1.3px;
  color:#000;
}
img.center {
    margin:10px auto;
}
img.profile{
    width:150px;
    border-radius: 5px;
}
img.appicon{
    height: 150px;

}
img.splash{
    height: 300px;
    margin-top: 40px;
    border-radius: 15px;
} 
.menu{
	vertical-align: middle;
    display: block;
}
p.missiontext{

}
.aboutblock{
    font-size: 20px;
    line-height: 35px;
    margin: 50px;
    text-align: justify;
    width: 600px;
    margin: auto;
}
.newsblock{
    font-size: 20px;
    line-height: 35px;
    margin: 50px;
    text-align: justify;
    width: 700px;
    margin: auto;
}
.aboutblock2{
    font-size: 20px;
    line-height: 35px;
    margin: 50px;
    text-align: justify;
    width: 600px;
    margin: auto;
}
p.aboutblock2{
    line-height: 35px;

}
.galleryblock{
    font-size: 20px;
    line-height: 35px;
    margin: 50px;
    text-align: justify;
    width: 800px;
    margin: auto;
}
body {
  margin: 0;
  padding: 0;
  background:url('../images/BG.jpg') no-repeat;
  background-size:100%;
  background-color:#2f1412;
}
 
.nav ul {
  list-style: none;
  text-align: center;
  padding: 0;
  margin: 0;
}

 
.nav a {
  text-decoration: none;
  color: #000;
  display: block;
  transition: .15s background-color;
  border-radius: 5px;
}
 
.nav a:hover {
  background-color: #b01f0a;
  color:white;
  border-radius: 5px;
}
 
.nav a.active {
  background-color: #fff;
  color: #444;
  cursor: default;
}
 
@media screen and (min-width: 600px) {
  .nav li{
    width: 130px;
    border-bottom: none;
    height: 50px;
    line-height: 50px;
    font-size: 2.5em;
    text-align: center;
  }
 
  /* Option 1 - Display Inline */
  .nav li {
    display: inline-block;
    margin-right: -4px;
  }
 
  /* Options 2 - Float
  .nav li {
    float: left;
  }
  .nav ul {
    overflow: auto;
    width: 600px;
    margin: 0 auto;
  }
  .nav {
    background-color: #444;
  }
  */
}
@font-face {
    font-family: "Mechalock"; /*a name to be used later*/
    src: url(../fonts/Mechalock.ttf) format("truetype");
}

.clearfix { 
    display: inline-block; 
  }
.clearfix:after { 
    content: "."; 
    display: block; 
    clear: both; 
    visibility: hidden; 
    line-height: 0; 
    height: 0; 
}
#content {
  display: block;
  width: 100%;
  padding: 25px 20px;
  padding-bottom: 35px;
}

#thumbnails { display: block; margin-bottom: 10px; }
#thumbnails ul li { 
  float: left; 
  margin-right: 26px; 
  margin-bottom: 12px; 
}
.parts-table{
}
.parts-div{
  margin:0px auto; 
}
.parts-table td{
  margin:10px 0px;
}
.main-container{
  min-width: 830px;
  width:70%;
  border: 1px solid #BCBCBC;
  border-radius: 10px;
  padding:30px;
  background-color: rgba(255,255,255,0.8);
  box-shadow: 10px 10px 5px #111;
}
.parts-image{
  text-align: center;
  display: block;
  margin:0px auto;
}
.parts-desc{
  text-align: left;
  line-height: 20px;
  width:180px;
  padding:15px;
}
.buy-button-div{
  margin:0px auto;
  width: 70%;
  text-align: center;
  display: block;
  padding-left:30px;
}
.buy-button{
  display: block; 
  width: 70%;
  margin: 20px auto;
}
.background-container{
  min-height: 100%;
  margin-bottom: 60px;
}
.foot{
  height: 120px; 
  background-color: #222;
}
.flagsdiv{
  display:table-cell;
  float:right;
  padding:0px;
  margin-right:25px;
}
.main-nav{
  font-size:7.5px;
  color:black;
  margin: 0px 50px;
}
.navcenter{
  margin:0px auto;
}
.main-nav>li>a:hover{
  background-color: black;
  opacity: 0.5;
}
.nav-properties{
  background-color: transparent;
  border-style: none;
  border-radius: 0px;
}
.center{
  display:block;
  margin:0px auto;
}
.kitdescription{
  display: block;
  width: auto;
  float:left;
  text-align: justify;
}
.kitdescription h4,.kitdescription p{
  line-height: 30px;
 padding:3px;
  width:auto;
  padding-left:30px;
}
.details-link{
  padding-top:10px;
  padding-bottom: 30px;
  font-size:23px;
}
.twocolumns{
}
.applinks {
  text-align: center;
}
.guides-container{
  padding:0px 30px;
}
.manabot-logo{
  text-align: center;
}
.applinks img{
  width: 200px;
}

